# kolor

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  main.yml
src/: App.jsx  App.tsx  style.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Boxed.tsx  Icons.tsx
