[package]
name = "kolor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["clipboard-write-text", "window-start-dragging"] }
colors-transform = "0.2.11"
palette = "0.6.1"
tauri-plugin-window-state = "0.1.0"
random_color = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
